[package]
name = "stringbar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
directories = "5.0.1"
notify = "6.1.1"
ron = "0.8.1"
serde = { version = "1.0.200", features = ["derive"] }
sysinfo = "0.30.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
panic = "abort"
